tests/samples/negative/inference/return_inference_null.ax
module return_inference_null;

fn make_ptr() {
    return null;
}

fn main() -> i32 {
    let value = make_ptr();
    return 0;
}
